# mumak

./: .gitignore  ADR.md  Dockerfile  FUNCTIONS.md  README.md  dev.Dockerfile  init-db.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  postgres.yml
docker/: Dockerfile  Dockerfile.postgres  dev.Dockerfile
docs/: ADR.md  BOOTSTRAP.md  FUNCTIONS.md  INSTALL.md  ROADMAP.md
extension/: Cargo.toml  mumak.control
extension/sql/: example.sql
extension/src/: era_ext.rs  lib.rs
indexer/: Mumak.Indexer.csproj  Mumak.Indexer.sln  Program.cs  appsettings.json
indexer/Data/: MumakDbContext.cs  Utxo.cs
indexer/Migrations/: 20240910100707_InitialCreate.Designer.cs  20240910100707_InitialCreate.cs  MumakDbContextModelSnapshot.cs
indexer/Properties/: launchSettings.json
indexer/Reducers/: UtxoReducer.cs
